--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 # 3rd party C/C++ libraries
-/libs/
+libs/
 
 # OSX
 .DS_Store
