--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -1,7 +1,8 @@
-Django==2.2.6
+asgiref==3.2.6
+Django==3.0.4
 django-filter==2.2.0
-djangorestframework==3.10.3
-Markdown==3.1.1
-Pillow==6.2.0
-pytz==2019.2
-sqlparse==0.3.0
+djangorestframework==3.11.0
+Markdown==3.2.1
+Pillow==7.0.0
+pytz==2019.3
+sqlparse==0.3.1
